# HanaCore

./: .gitignore  .gitmodules  BUILD_BUSYBOX.md  CMakeLists.txt  README.md  check_fat32.py  justfile  limine.conf  linker.ld
boot/: boot.asm  boot1.asm  boot2.asm
cfg/: limine.conf
kernel/: CMakeLists.txt  kernel.cpp  limine_entry.c  nanoprintf.c  screen.c  screen.cpp  screen.h  screen.hpp
kernel/api/: hanaapi.h
kernel/arch/: gdt.cpp  gdt.hpp  gdt_reload.S  idt.cpp  idt.hpp  isr_common.S  pic.cpp  pic.hpp  pit.cpp  pit.hpp  pit_entry.S  syscall.S  syscall_init.cpp
kernel/drivers/: framebuffer.cpp  framebuffer.h  framebuffer.hpp  fun.cpp  fun.hpp  ide.cpp  ide.hpp  keyboard.cpp  keyboard.hpp  mouse.cpp  mouse.hpp  pci.cpp  pci.hpp  screen.cpp  screen.hpp  virtio.cpp  virtio.hpp
kernel/filesystem/: devfs.cpp  devfs.hpp  ext2.cpp  ext2.hpp  ext3.cpp  ext3.hpp  fat32.cpp  fat32.hpp  floppy.cpp  floppy.hpp  hanafs.cpp  hanafs.hpp  initrd.cpp  initrd.hpp  isofs.cpp  isofs.hpp  procfs.cpp  procfs.hpp  ramfs.cpp  ramfs.hpp  vfs.cpp  vfs.hpp
kernel/graphics/: cursor.hpp  wm.cpp
kernel/libs/: libc.c  libc.h  nanoprintf.c  nanoprintf.h
kernel/mem/: bump_alloc.cpp  bump_alloc.hpp  heap.cpp  heap.hpp  pma.cpp  pma.hpp  vmm.cpp  vmm.hpp
kernel/net/: e1000.cpp  e1000.hpp  loopback.cpp  lwip_wrapper.cpp  lwip_wrapper.hpp  netif.cpp  netif.hpp  virtio_net.cpp
kernel/scheduler/: scheduler.cpp  scheduler.hpp  switch.S
kernel/shell/: commands.cpp  commands.hpp  login.cpp  shell.cpp  shell.hpp
kernel/shell/coreutils/: cat.cpp  fetch.cpp  format.cpp  fs.cpp  install.cpp  ls.cpp  lsblk.cpp  mkdir.cpp  rm.cpp  rmdir.cpp  touch.cpp
kernel/tty/: pty.cpp  pty.hpp  tty.cpp  tty.hpp
kernel/userland/: elf_loader.cpp  elf_loader.hpp  fdtable.cpp  fdtable.hpp  login.cpp  login.hpp  module_runner.cpp  module_runner.hpp  syscalls.cpp  syscalls.hpp  users.cpp  users.hpp
kernel/userland/musl_shim/: CMakeLists.txt  musl_shim.c  musl_shim.h
kernel/utils/: logger.cpp  logger.hpp  utils.hpp
test_programs/: hello_hana.c
tools/: README_BUSYBOX.md  build_busybox.sh  build_user_programs.sh  install_user_bins_to_iso.sh  mkrootfs.sh
tools/fs_ubsan/: main.cpp  stubs.cpp
userland/: CMakeLists.txt  crt0.S  hanabox.c  hcsh.c  hello.cpp  hello_module.c  libhana.c  mkrootfs.sh  shell.cpp  shell.hpp
userland/apps/: ls.c
userland/coreutils/: cat.c  echo.c  ls.c  syscall_stub.c
userland/hello/: main.cpp
userland/shell/: hcsh.c
